Add legacy browser support bundle

--- a/index.html
+++ b/index.html
@@ -2835,22 +2835,6 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="src/scripts/globalthis-polyfill.js"></script>
-  <script src="src/data/devices/index.js"></script>
-  <script src="src/data/devices/cameras.js"></script>
-  <script src="src/data/devices/monitors.js"></script>
-  <script src="src/data/devices/video.js"></script>
-  <script src="src/data/devices/fiz.js"></script>
-  <script src="src/data/devices/batteries.js"></script>
-  <script src="src/data/devices/batteryHotswaps.js"></script>
-  <script src="src/data/devices/cages.js"></script>
-  <script src="src/data/devices/gearList.js"></script>
-  <script src="src/data/devices/wirelessReceivers.js"></script>
-  <script src="src/scripts/storage.js"></script>
-  <script src="src/scripts/translations.js"></script>
-  <script src="src/vendor/lz-string.min.js"></script>
-  <script src="src/vendor/lottie-light.min.js"></script>
-  <script src="src/scripts/script.js"></script>
-  <script src="src/scripts/overview.js"></script>
+  <script src="src/scripts/loader.js"></script>
 </body>
 </html>
