--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
         <button id="shareSetupBtn">
-          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF423;</span>
+          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7AB;</span>
           Export Project
         </button>
         <div id="sharedLinkRow" class="share-import-group">
@@ -212,7 +212,7 @@
             class="visually-hidden"
           />
           <button id="applySharedLinkBtn">
-            <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF425;</span>
+            <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7C7;</span>
             Import Project
           </button>
         </div>
@@ -723,8 +723,8 @@
     </div>
     <button id="addDeviceBtn">Add</button>
     <button id="cancelEditBtn" class="hidden"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>Cancel</button>
-      <button id="exportDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF423;</span>Export Database</button>
-      <button id="importDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF425;</span>Import Database</button>
+      <button id="exportDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7AB;</span>Export Database</button>
+      <button id="importDataBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE7C7;</span>Import Database</button>
       <input type="file" id="importFileInput" accept=".json" class="hidden" />
       <button id="exportAndRevertBtn">Export and Revert to default Database</button>
     </div>
