Add inline schema fallback for browser usage

--- a/index.html
+++ b/index.html
@@ -2848,6 +2848,7 @@
   <script src="src/data/devices/wirelessReceivers.js"></script>
   <script src="src/scripts/storage.js"></script>
   <script src="src/scripts/translations.js"></script>
+  <script src="src/data/schema-inline.js"></script>
   <script src="src/vendor/lz-string.min.js"></script>
   <script src="src/vendor/lottie-light.min.js"></script>
   <script src="src/scripts/script.js"></script>
