--- a/index.html
+++ b/index.html
@@ -2385,13 +2385,13 @@
           aria-labelledby="sharedImportLegend"
         >
           <option id="sharedImportModeNoneOption" value="none" selected>
-            Don't import automatic gear rules
+            Do not import automatic gear rules
           </option>
           <option id="sharedImportModeProjectOption" value="project" disabled>
             Use shared rules for this project only
           </option>
           <option id="sharedImportModeGlobalOption" value="global" disabled>
-            Add shared rules to all projects
+            Use shared rules for all projects
           </option>
         </select>
       </fieldset>
