--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
     aria-describedby="installGuideIntro"
     hidden
   >
-    <div class="modal-surface install-guide-content">
+    <div class="modal-surface modal-surface-scrollable install-guide-content">
       <h2 id="installGuideTitle">Install Cine Power Planner</h2>
       <p id="installGuideIntro">Add the planner to your Home Screen to use it like an app.</p>
       <ol id="installGuideSteps">
@@ -998,7 +998,7 @@
     aria-describedby="iosPwaHelpIntro"
     hidden
   >
-    <div class="modal-surface ios-pwa-help-content">
+    <div class="modal-surface modal-surface-scrollable ios-pwa-help-content">
       <h2 id="iosPwaHelpTitle">Keep your data when installing on iOS</h2>
       <p id="iosPwaHelpIntro">
         Safari keeps the browser tab and the installed app separate. To move your Cine Power Planner data into the app:
