--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         <button id="clearSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>Clear Current Project</button>
       </div>
     </div>
-    <p id="shareLinkMessage" class="hidden" role="status" aria-live="polite"></p>
+    <p id="shareLinkMessage" class="hidden status-message" role="status" aria-live="polite"></p>
     <div class="form-row form-row-actions" role="group" aria-label="Project exports">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
@@ -363,16 +363,16 @@
     <div id="powerDiagram" class="hidden">
       <div id="powerDiagramBar" class="power-bar" role="img" aria-label="Power usage diagram"></div>
       <div id="powerDiagramLegend"></div>
-      <p id="maxPowerText"></p>
+      <p id="maxPowerText" class="status-message"></p>
     </div>
     <p><strong><span id="totalPowerLabel">Total Consumption:</span></strong> <span id="totalPower">0.0</span> W</p>
     <p><strong><span id="totalCurrent144Label">Total Current (at 14.4V):</span></strong> <span id="totalCurrent144">0.00</span> A</p>
     <p><strong><span id="totalCurrent12Label">Total Current (at 12V):</span></strong> <span id="totalCurrent12">0.00</span> A</p>
     <p><strong><span id="batteryLifeLabel">Runtime (estimated):</span></strong> <span id="batteryLife">0.00</span> <span id="batteryLifeUnit">hrs</span> <span id="runtimeAverageNote"></span></p>
     <p><strong><span id="batteryCountLabel">Batteries for 10h shoot (incl. spare):</span></strong> <span id="batteryCount">–</span></p>
-    <p id="pinWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
-    <p id="dtapWarning" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
-    <p id="hotswapWarning" role="status" aria-live="polite" aria-describedby="batteryHotswapLabel"></p>
+    <p id="pinWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
+    <p id="dtapWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryLabel"></p>
+    <p id="hotswapWarning" class="status-message" role="status" aria-live="polite" aria-describedby="batteryHotswapLabel"></p>
     <div id="temperatureNote"></div>
     <button id="runtimeFeedbackBtn" type="button">
       <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF13E;</span>Submit User Runtime Feedback
@@ -384,7 +384,7 @@
 
   <section id="setupDiagram">
     <h2 id="setupDiagramHeading">Connection Diagram</h2>
-    <p id="compatWarning" role="status" aria-live="polite"></p>
+    <p id="compatWarning" class="status-message" role="status" aria-live="polite"></p>
     <p id="diagramDesc" class="visually-hidden">Visual representation of connected devices.</p>
     <div id="diagramArea" role="img" aria-label="Project diagram" aria-describedby="diagramDesc">
       <div id="diagramPopup" class="diagram-popup"></div>
