Complete mattebox auto gear rules

--- a/index.html
+++ b/index.html
@@ -862,6 +862,10 @@
             <label for="autoGearScenarios" id="autoGearScenariosLabel">Required scenarios</label>
             <select id="autoGearScenarios" class="auto-gear-scenarios" multiple></select>
           </div>
+          <div class="form-row">
+            <label for="autoGearMattebox" id="autoGearMatteboxLabel">Mattebox options</label>
+            <select id="autoGearMattebox" class="auto-gear-mattebox" multiple></select>
+          </div>
           <div class="auto-gear-editor-columns">
             <div class="auto-gear-column">
               <h4 id="autoGearAddItemsHeading">Add these items</h4>
