Use Uicons glyph for overview button

--- a/index.html
+++ b/index.html
@@ -225,22 +225,7 @@
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
         <button id="generateOverviewBtn">
-          <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-              focusable="false"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <rect x="4.5" y="3.75" width="15" height="16.5" rx="2.25" />
-              <path d="M8.5 8h7" />
-              <path d="M8.5 11.5h7" />
-              <line x1="7.75" y1="16.75" x2="16.25" y2="16.75" />
-              <polyline points="8.75 16.75 11 13.75 13.25 15.5 16 12.5" />
-            </svg>
-          </span>
+          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF1F5;</span>
           Generate Overview
         </button>
         <button id="generateGearListBtn" type="button">
