Use distinct icons for overview and gear list

--- a/index.html
+++ b/index.html
@@ -225,13 +225,14 @@
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
         <button id="generateOverviewBtn">
-          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF1F5;</span>
+          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF13E;</span>
           Generate Overview
         </button>
         <button id="generateGearListBtn" type="button">
           <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
             <svg
               viewBox="0 0 24 24"
+              xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true"
               focusable="false"
               stroke-width="1.5"
