--- a/index.html
+++ b/index.html
@@ -229,22 +229,7 @@
           Generate Overview
         </button>
         <button id="generateGearListBtn" type="button">
-          <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg
-              viewBox="0 0 24 24"
-              aria-hidden="true"
-              focusable="false"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <rect x="6.75" y="5.5" width="10.5" height="13.5" rx="2" />
-              <path d="M9.75 3.5h4.5" />
-              <path d="M9.5 9h6" />
-              <path d="M9.5 12.75l1.5 1.5 2.75-2.75" />
-              <path d="M9.5 16.25l1.5 1.5 2.75-2.75" />
-            </svg>
-          </span>
+          <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE467;</span>
           Generate Gear List and Project Requirements
         </button>
       </div>
