Adjust logo palette for pink mode

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <style>
             .logo-background { fill: var(--logo-background-color, var(--accent-color)); }
             .cls-1 { fill: var(--logo-accent-color, var(--accent-color)); }
-            .cls-2 { fill: #fff; }
+            .cls-2 { fill: var(--logo-center-color, #fff); }
           </style>
         </defs>
         <rect class="logo-background" width="1024" height="1024" rx="128" ry="128" />
