Add gear list deletion control to project overview

--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
           <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE467;</span>
           Generate Gear List and Project Requirements
         </button>
+        <button id="deleteGearListProjectBtn" type="button" class="hidden"></button>
       </div>
     </div>
   </section>
