Add camera handle triggers to automatic gear rules

--- a/index.html
+++ b/index.html
@@ -827,6 +827,18 @@
             <label for="autoGearMattebox" id="autoGearMatteboxLabel">Mattebox options</label>
             <select id="autoGearMattebox" class="auto-gear-mattebox" multiple></select>
           </div>
+          <div class="form-row">
+            <label for="autoGearCameraHandle" id="autoGearCameraHandleLabel">Camera handles</label>
+            <select id="autoGearCameraHandle" class="auto-gear-camera-handle" multiple></select>
+          </div>
+          <div class="form-row">
+            <label for="autoGearViewfinderExtension" id="autoGearViewfinderExtensionLabel">Viewfinder extension</label>
+            <select id="autoGearViewfinderExtension" class="auto-gear-viewfinder-extension" multiple></select>
+          </div>
+          <div class="form-row">
+            <label for="autoGearVideoDistribution" id="autoGearVideoDistributionLabel">Video distribution</label>
+            <select id="autoGearVideoDistribution" class="auto-gear-video-distribution" multiple></select>
+          </div>
           <div class="auto-gear-editor-columns">
             <div class="auto-gear-column">
               <h4 id="autoGearAddItemsHeading">Add these items</h4>
