Use Uicon glyph for reset view control

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
       <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">-</button>
       <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
       <button id="resetView" type="button">
-        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="film">&#xF114;</span>
+        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEB6D;</span>
         Reset View
       </button>
       <button id="gridSnapToggle" type="button" aria-pressed="false">Snap to Grid</button>
