Update help references for connection diagram

--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@
               href="#setupDiagram"
               data-help-target="#setupDiagramHeading"
               data-help-highlight="#setupDiagram"
-            >Project Diagram</a>
+            >Connection Diagram</a>
             <a
               class="help-link button-link"
               href="#device-manager"
@@ -1836,9 +1836,9 @@
         <section
           data-help-section
           id="setupDiagramHelp"
-          data-help-keywords="diagram layout connections map wiring visualize nodes drag zoom pan svg jpg export reset snap grid"
+          data-help-keywords="connection diagram project diagram layout connections map wiring visualize nodes drag zoom pan svg jpg export reset snap grid"
         >
-          <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEF8C;</span>Project Diagram</h3>
+          <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEF8C;</span>Connection Diagram</h3>
           <ul>
             <li>Visualizes power and video connections between selected devices.</li>
             <li>Drag nodes to rearrange the layout; use +/– buttons to zoom.</li>
@@ -2493,9 +2493,9 @@
           </details>
           <details
             class="faq-item"
-            data-help-keywords="project diagram connections cables layout wiring nodes visual map"
+            data-help-keywords="connection diagram project diagram connections cables layout wiring nodes visual map"
           >
-            <summary>What does the Project Diagram show?</summary>
+            <summary>What does the Connection Diagram show?</summary>
             <p>
               The
               <a
