Use updated sidebar menu icon

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <h1 id="mainTitle">Cine Power Planner</h1>
     </a>
     <button id="menuToggle" aria-label="Menu" aria-expanded="false">
-      <span class="icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE90F;</span>
+      <span class="icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE198;</span>
     </button>
     <div class="feature-search">
       <div id="featureSearchContainer">
