--- a/index.html
+++ b/index.html
@@ -391,8 +391,12 @@
     </div>
     <div id="diagramLegend" class="diagram-legend"></div>
     <div class="diagram-controls">
-      <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">-</button>
-      <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">+</button>
+      <button id="zoomOut" type="button" title="Zoom out" aria-label="Zoom out">
+        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE9E0;</span>
+      </button>
+      <button id="zoomIn" type="button" title="Zoom in" aria-label="Zoom in">
+        <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+      </button>
       <button id="resetView" type="button">
         <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEB6D;</span>
         Reset View
@@ -2633,17 +2637,23 @@
             <div class="form-row" id="crewListRow">
               <label id="crewLabel">Crew:</label>
               <div id="crewContainer" aria-labelledby="crewLabel"></div>
-              <button type="button" id="addPersonBtn">+</button>
+              <button type="button" id="addPersonBtn">
+                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+              </button>
             </div>
             <div class="form-row" id="prepListRow">
               <label id="prepLabel">Prep Days:</label>
               <div id="prepContainer"></div>
-              <button type="button" id="addPrepBtn">+</button>
+              <button type="button" id="addPrepBtn">
+                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+              </button>
             </div>
             <div class="form-row" id="shootListRow">
               <label id="shootLabel">Shooting Days:</label>
               <div id="shootContainer"></div>
-              <button type="button" id="addShootBtn">+</button>
+              <button type="button" id="addShootBtn">
+                <span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE02E;</span>
+              </button>
             </div>
           </div>
         </section>
