Expand sidebar navigation with planner sections and quick actions

--- a/index.html
+++ b/index.html
@@ -198,7 +198,33 @@
       <li><a href="#setup-config" data-nav-key="deviceSelectionHeading">Configure Devices</a></li>
       <li><a href="#results" data-nav-key="resultsHeading">Power Summary</a></li>
       <li><a href="#setupDiagram" data-nav-key="setupDiagramHeading">Connection Diagram</a></li>
+      <li><a href="#batteryComparison" data-nav-key="batteryComparisonHeading">Battery Comparison</a></li>
+      <li><a href="#projectRequirementsOutput" data-nav-key="projectRequirementsNav">Project Requirements</a></li>
+      <li><a href="#gearListOutput" data-nav-key="gearListNav">Gear List</a></li>
       <li><a href="#device-manager" data-nav-key="deviceManagerHeading">Device Library</a></li>
+      <li class="sidebar-divider" role="separator" aria-hidden="true"></li>
+      <li>
+        <button
+          type="button"
+          data-nav-key="openSettingsNav"
+          data-sidebar-action="open-settings"
+          aria-haspopup="dialog"
+          aria-controls="settingsDialog"
+        >
+          Open Settings
+        </button>
+      </li>
+      <li>
+        <button
+          type="button"
+          data-nav-key="openHelpNav"
+          data-sidebar-action="open-help"
+          aria-haspopup="dialog"
+          aria-controls="helpDialog"
+        >
+          Open Help Center
+        </button>
+      </li>
     </ul>
   </nav>
   <div id="menuOverlay" class="hidden"></div>
