Improve help dialog results feedback

--- a/index.html
+++ b/index.html
@@ -1119,6 +1119,12 @@
         <h3 id="helpQuickLinksHeading">Jump to a topic</h3>
         <ul id="helpQuickLinksList"></ul>
       </nav>
+      <p
+        id="helpResultsSummary"
+        class="help-results-summary"
+        aria-live="polite"
+        hidden
+      ></p>
       <p id="helpNoResults" aria-live="polite" hidden>No results found.</p>
       <div id="helpSections">
         <section
