Improve settings tab styling

--- a/index.html
+++ b/index.html
@@ -789,8 +789,15 @@
           role="tab"
           aria-controls="settingsPanel-general"
           aria-selected="true"
+          data-icon="sliders"
         >
-          General
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="essential"
+            >&#xF143;</span
+          >
+          <span class="settings-tab-label">General</span>
         </button>
         <button
           type="button"
@@ -800,8 +807,15 @@
           aria-controls="settingsPanel-autoGear"
           aria-selected="false"
           tabindex="-1"
+          data-icon="gears"
         >
-          Automatic Gear
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="uicons"
+            >&#xE8AF;</span
+          >
+          <span class="settings-tab-label">Automatic Gear</span>
         </button>
         <button
           type="button"
@@ -811,8 +825,15 @@
           aria-controls="settingsPanel-accessibility"
           aria-selected="false"
           tabindex="-1"
+          data-icon="brightness"
         >
-          Accessibility
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="uicons"
+            >&#xE2B3;</span
+          >
+          <span class="settings-tab-label">Accessibility</span>
         </button>
         <button
           type="button"
@@ -822,8 +843,15 @@
           aria-controls="settingsPanel-backup"
           aria-selected="false"
           tabindex="-1"
+          data-icon="fileExport"
         >
-          Backup &amp; Restore
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="uicons"
+            >&#xE7AB;</span
+          >
+          <span class="settings-tab-label">Backup &amp; Restore</span>
         </button>
         <button
           type="button"
@@ -833,8 +861,15 @@
           aria-controls="settingsPanel-data"
           aria-selected="false"
           tabindex="-1"
+          data-icon="load"
         >
-          Data &amp; Storage
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="uicons"
+            >&#xE0E0;</span
+          >
+          <span class="settings-tab-label">Data &amp; Storage</span>
         </button>
         <button
           type="button"
@@ -844,8 +879,15 @@
           aria-controls="settingsPanel-about"
           aria-selected="false"
           tabindex="-1"
+          data-icon="note"
         >
-          About &amp; Support
+          <span
+            class="btn-icon icon-glyph settings-tab-icon"
+            aria-hidden="true"
+            data-icon-font="essential"
+            >&#xF13E;</span
+          >
+          <span class="settings-tab-label">About &amp; Support</span>
         </button>
       </div>
       <section
