Restore visible cage selector

--- a/index.html
+++ b/index.html
@@ -308,13 +308,17 @@
       </div>
       <div class="form-row">
         <label for="videoSelect" id="videoLabel">Wireless Transmitter:</label>
-      <div class="select-wrapper">
+        <div class="select-wrapper">
           <select id="videoSelect" aria-labelledby="videoLabel"></select>
         </div>
       </div>
 
-      <!-- Hidden cage select maintained for gear list synchronization -->
-      <select id="cageSelect" hidden></select>
+      <div class="form-row">
+        <label for="cageSelect" id="cageLabel">Camera Cage:</label>
+        <div class="select-wrapper">
+          <select id="cageSelect" aria-labelledby="cageLabel"></select>
+        </div>
+      </div>
 
     <fieldset>
       <legend id="fizLegend">FIZ (Follow Focus) Systems</legend>
