Improve help dialog onboarding guidance

--- a/index.html
+++ b/index.html
@@ -1447,6 +1447,28 @@
               along and verify every step.
             </li>
           </ul>
+          <div class="help-callout" role="note" aria-label="Popular help shortcuts">
+            <h4>Quick answers</h4>
+            <ul>
+              <li>
+                Jump to <a class="help-link" href="#savingAndSharing">Saving, Sharing &amp; Restoring Projects</a> for a
+                walkthrough of safe exports, imports, backups and restores before you go offline or close the browser.
+              </li>
+              <li>
+                Visit <a class="help-link" href="#automaticBackups">Automatic Backups</a> to see how background
+                snapshots protect work in progress and how to restore earlier versions without losing data.
+              </li>
+              <li>
+                Need to tweak the catalog? <a class="help-link" href="#deviceDatabaseEditor">Device Database Editor</a>
+                explains how to add, adjust or archive custom gear while keeping shared datasets intact.
+              </li>
+            </ul>
+            <p class="help-callout-note">
+              Search tip: Type a feature name, device category or problem (for example “diagram”, “favorites” or
+              “warning”) to filter topics instantly; the quick links above update as you type so you can reach the right
+              section with a single arrow press.
+            </p>
+          </div>
         </section>
         <section
           data-help-section
@@ -1514,51 +1536,90 @@
           <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEF93;</span>Getting Started</h3>
           <ol>
             <li>
-              Select a camera, monitor and other devices from the dropdown menus in the
+              Open the
               <a
-                class="help-link"
-                href="#setup-config"
-                data-help-target="#cameraSelect"
-                data-help-highlight="#setup-config"
-              >Configure Devices</a>
-              section.
-            </li>
-            <li>Use the search boxes inside each dropdown to quickly filter the lists.</li>
-            <li>
-              Open the Project Requirements dialog with the
-              <a
-                class="help-link"
-                href="#projectRequirementsOutput"
-                data-help-target="#generateGearListBtn"
-              >Generate Gear List and Project Requirements</a>
-              button when you need to capture crew, schedule or scenario notes; those details feed printouts and gear lists.
+                class="help-link button-link"
+                href="#setup-manager"
+                data-help-target="#setupSelect"
+                data-help-highlight="#setup-manager"
+              >Saved Projects</a>
+              menu to start from <strong>-- New Project --</strong> or pick an existing setup before making changes.
             </li>
             <li>
-              Choose a battery in the
-              <a
-                class="help-link"
-                href="#setup-config"
-                data-help-target="#batterySelect"
-                data-help-highlight="#setup-config"
-              >Battery</a>
-              dropdown to update total draw and estimated runtime.
-            </li>
-            <li>
-              Name the project in the
+              Enter a descriptive name in the
               <a
                 class="help-link"
                 href="#setup-manager"
                 data-help-target="#setupName"
                 data-help-highlight="#setup-manager"
               >Project Name</a>
-              field and click
+              field so autosave shortcuts, exports and backups all label the configuration clearly.
+            </li>
+            <li>
+              Add your camera, monitor and accessories from the dropdowns in
+              <a
+                class="help-link"
+                href="#setup-config"
+                data-help-target="#cameraSelect"
+                data-help-highlight="#setup-config"
+              >Configure Devices</a>.
+              Each selector includes instant search and highlights starred favorites to keep load-ins quick.
+            </li>
+            <li>
+              Capture crew notes, power requirements and scenarios with
+              <a
+                class="help-link"
+                href="#projectRequirementsOutput"
+                data-help-target="#generateGearListBtn"
+              >Generate Gear List and Project Requirements</a>
+              —those details sync to printouts and the automatic gear generator.
+            </li>
+            <li>
+              Choose a
+              <a
+                class="help-link"
+                href="#setup-config"
+                data-help-target="#batterySelect"
+                data-help-highlight="#setup-config"
+              >Battery</a>
+              and optional
+              <a
+                class="help-link"
+                href="#setup-config"
+                data-help-target="#batteryHotswapSelect"
+                data-help-highlight="#setup-config"
+              >Battery Hotswap</a>
+              to update runtime; review the
+              <a
+                class="help-link"
+                href="#results"
+                data-help-target="#resultsHeading"
+                data-help-highlight="#results"
+              >Power Summary</a>
+              for limits or warnings before you roll cameras.
+            </li>
+            <li>
+              Click
               <a
                 class="help-link button-link"
                 href="#setup-manager"
                 data-help-target="#saveSetupBtn"
                 data-help-highlight="#setup-manager"
               ><strong>Save</strong></a>
-              so you can revisit, share or print the setup later.
+              often, then export or back up through
+              <a
+                class="help-link button-link"
+                href="#setup-manager"
+                data-help-target="#shareSetupBtn"
+                data-help-highlight="#setup-manager"
+              >Export project</a>
+              and
+              <a
+                class="help-link button-link"
+                href="#settingsButton"
+                data-help-target="#settingsButton"
+              >Settings → Backup &amp; Restore</a>
+              to keep every version available offline.
             </li>
           </ol>
         </section>
