Add reduced motion and relaxed spacing accessibility toggles

--- a/index.html
+++ b/index.html
@@ -1249,6 +1249,23 @@
           <label for="settingsHighContrast" id="settingsHighContrastLabel">High contrast</label>
           <input type="checkbox" id="settingsHighContrast" />
         </div>
+        <p id="settingsHighContrastHelp" class="settings-hint">
+          Increase contrast for text and outlines to boost readability in any theme.
+        </p>
+        <div class="form-row">
+          <label for="settingsReduceMotion" id="settingsReduceMotionLabel">Reduce motion</label>
+          <input type="checkbox" id="settingsReduceMotion" />
+        </div>
+        <p id="settingsReduceMotionHelp" class="settings-hint">
+          Limit color and interface animations so transitions feel steady for motion-sensitive users.
+        </p>
+        <div class="form-row">
+          <label for="settingsRelaxedSpacing" id="settingsRelaxedSpacingLabel">Relaxed spacing</label>
+          <input type="checkbox" id="settingsRelaxedSpacing" />
+        </div>
+        <p id="settingsRelaxedSpacingHelp" class="settings-hint">
+          Increase line spacing and control padding to make text easier to scan and tap.
+        </p>
         </section>
       </section>
       <section
