Hide monitoring selectors until monitoring rules apply

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
             <label for="autoGearViewfinderExtension" id="autoGearViewfinderExtensionLabel">Viewfinder extension</label>
             <select id="autoGearViewfinderExtension" class="auto-gear-viewfinder-extension" multiple></select>
           </div>
-          <div class="form-row">
+          <div class="form-row monitoring-conditional" data-monitoring-row hidden>
             <label for="autoGearVideoDistribution" id="autoGearVideoDistributionLabel">Video distribution</label>
             <select id="autoGearVideoDistribution" class="auto-gear-video-distribution" multiple></select>
           </div>
@@ -1053,11 +1053,11 @@
             <label for="autoGearCamera" id="autoGearCameraLabel">Camera</label>
             <select id="autoGearCamera" class="auto-gear-camera" multiple></select>
           </div>
-          <div class="form-row">
+          <div class="form-row monitoring-conditional" data-monitoring-row hidden>
             <label for="autoGearMonitor" id="autoGearMonitorLabel">Onboard monitor</label>
             <select id="autoGearMonitor" class="auto-gear-monitor" multiple></select>
           </div>
-          <div class="form-row">
+          <div class="form-row monitoring-conditional" data-monitoring-row hidden>
             <label for="autoGearWireless" id="autoGearWirelessLabel">Wireless transmitter</label>
             <select id="autoGearWireless" class="auto-gear-wireless" multiple></select>
           </div>
