Add monitoring visibility manager for auto gear editor

--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@
               size="10"
             ></select>
           </div>
-          <div class="form-row">
+          <div class="form-row" hidden>
             <label for="autoGearVideoDistribution" id="autoGearVideoDistributionLabel">Video distribution</label>
             <select
               id="autoGearVideoDistribution"
@@ -1083,7 +1083,7 @@
               size="10"
             ></select>
           </div>
-          <div class="form-row">
+          <div class="form-row" hidden>
             <label for="autoGearMonitor" id="autoGearMonitorLabel">Onboard monitor</label>
             <select
               id="autoGearMonitor"
@@ -1092,7 +1092,7 @@
               size="10"
             ></select>
           </div>
-          <div class="form-row">
+          <div class="form-row" hidden>
             <label for="autoGearWireless" id="autoGearWirelessLabel">Wireless transmitter</label>
             <select
               id="autoGearWireless"
